1998-11-12  a sun  <asun@hecate.darksunrising.blah>

	* extent.c (shrink_fork): added some lock_bitmap/unlock_bitmap's
	to protect hfs_clear_vbm_bits. we should no longer have problems
	with free_ablocks wrapping around.

1998-11-02  a sun  <asun@hecate.darksunrising.blah>

	* mdb.c (hfs_mdb_get): plugged up an mdb failed initialization
	leak.

1998-10-31  a sun  <asun@hecate.darksunrising.blah>

	* version.c (hfs_version): bumped to version 0.96.

	* mdb.c (hfs_mdb_commit): you only write out the alternate MDB
	when the catalog or extents overflow files grow. that just leaves
	the btree corruption problems. bleah (whilst deleting a bunch of
	files, more of the btree can get pruned away than desired).

1998-10-30  a sun  <asun@hecate.darksunrising.blah>

	* dir.c: fixed a bunch of silliness with deletions. make sure to
	zero out stuff and set mark_inode_dirty().
	
1998-10-29  a sun  <asun@hecate.darksunrising.blah>

	* string.c (hfs_strcmp, hfs_streq, hfs_strhash): converted them to
	take name/len arguments instead of hfs_name to reduce copying.

	* dir.c, dir_nat.c, dir_cap.c, dir_dbl.c, sysdep.c: modified
	relevant areas to reflect string.c changes.
	
1998-10-28  a sun  <asun@hecate.darksunrising.blah>

	* hfs.h (hfs_lookup_dentry): oh my. more silliness. make sure to
	have the d_lookup use the same hash value as the one generated by
	hfs_hash_dentry. i also changed the argument order.
	(hfs_drop_special): change the argument order to be more in line
	with what the dcache stuff looks like.

	* sysdep.c (hfs_compare_dentry): the compare was returning the
	wrong value for correct matches and causing all sorts of
	mischief. this fixes both directory counts and mounting on top of
	hfs volumes.

	* file.c, file_cap.c, file_hdr.c: added mark_inode_dirty()'s in
	the relevant places.

1998-10-11  root  <asun@hecate.darksunrising.blah>

	* mdb.c (hfs_mdb_get): moved initialization of mdb->entry_dirty
	list to here to deal with trying to read a bad hfs volume.
