@@ -11,6 +11,7 @@
 
 #define __KERNEL_SYSCALLS__
 
+#include <linux/config.h>
 #include <linux/proc_fs.h>
 #include <linux/unistd.h>
 #include <linux/ctype.h>
