@@ -8,6 +8,7 @@
  *            Chris Evans, <chris@ferret.lmh.ox.ac.uk>
  */
 
+#include <linux/config.h>
 #include <linux/mm.h>
 #include <linux/shm.h>
 #include <linux/init.h>
