@@ -1,3 +1,4 @@
+#include <linux/config.h>
 #include <linux/mm.h>
 #include <linux/module.h>
 #include <asm/uaccess.h>
